--- a/app/global.css
+++ b/app/global.css
@@ -1,5 +1,9 @@
 @import 'tailwindcss';
-@import 'fumadocs-ui/css/neutral.css';
+@import 'fumadocs-ui/css/catppuccin.css';
 @import 'fumadocs-ui/css/preset.css';
 
 @source '../node_modules/fumadocs-ui/dist/**/*.js';
+
+@theme {
+    --font-modista: "Modista";
+}
